Fix menu wrap in Windows version of Chrome

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -158,6 +158,7 @@ html.gte-ie9 #block-islandora-solr-advanced {
     font-weight: bold;
     font-size:0.93em;
     text-decoration:none;
+    white-space:nowrap;
 }
 
 #block-menu-menu-search-bar ul.menu li a:hover,
